<resources>
    <string name="app_name">MyWhatsapp</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="_12_00">12:00</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>