<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:civ_border_color="#000000"
        app:civ_border_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imageViewProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewLastMessage"/>

    <TextView
        android:id="@+id/textViewLastMessage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintEnd_toEndOf="@id/textViewName"
        android:layout_marginTop="8dp"/>
    
    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_00"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"/>
    
   <ImageView
       android:id="@+id/imageViewSeen"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/ic_baseline_check_circle_24"
       app:layout_constraintTop_toBottomOf="@id/textViewTime"
       app:layout_constraintStart_toStartOf="@id/textViewTime"
       app:layout_constraintEnd_toEndOf="@id/textViewTime"/>
        


</androidx.constraintlayout.widget.ConstraintLayout>